/**
 * Snapshot + quality gates for marketplace description generation.
 * Guards against robotic field-restating copy regressing over time.
 */
import { describe, expect, it } from "vitest";
import {
  buildListingDescriptionFromFacts,
  isRoboticListingDescription,
  resolveListingDescriptionStyle,
  type ListingDescriptionQuality,
} from "./awhina-product-ux";
import type { SkyAiListingFill } from "./sky-ai-listing-fill";
import { processCanonicalAwhina } from "./awhina-canonical";
import { clearSearchSession, searchSessionKey } from "./awhina-search-memory";
import { clearTaskScope, taskScopeKey } from "./awhina-task-scope";
import { clearListingDraftSession, listingDraftSessionKey } from "./awhina-listing-fill-tools";

function wipe(id: string) {
  clearSearchSession(searchSessionKey({ conversationId: id }));
  clearTaskScope(taskScopeKey({ conversationId: id }));
  clearListingDraftSession(listingDraftSessionKey({ conversationId: id }));
}

const ROBOTIC_SMELLS =
  /\bCondition:\s*|\bLocated in [A-Za-z].*\.\s*Pickup available\.|\bMessage me with any questions\b|\bOdometer:\s*|\bColour:\s*/i;

function assertNaturalMarketplaceCopy(desc: string) {
  expect(desc.trim().length).toBeGreaterThan(40);
  expect(desc).not.toMatch(ROBOTIC_SMELLS);
  expect(isRoboticListingDescription(desc)).toBe(false);
  // Prefer flowing prose over many tiny label sentences
  const labelSentences = desc
    .split(/(?<=\.)\s+/)
    .filter((s) =>
      /^(Condition:|Located in|Odometer:|Colour:|Pickup available\.|Pickup only\.)/i.test(s.trim())
    );
  expect(labelSentences.length).toBe(0);
}

describe("resolveListingDescriptionStyle", () => {
  it("maps categories to prose styles", () => {
    expect(resolveListingDescriptionStyle({ listingType: "vehicle" })).toBe("vehicle");
    expect(resolveListingDescriptionStyle({ listingType: "service" })).toBe("service");
    expect(resolveListingDescriptionStyle({ listingType: "rental" })).toBe("rental");
    expect(resolveListingDescriptionStyle({ category: "Gaming", title: "PS5" })).toBe("gaming");
    expect(resolveListingDescriptionStyle({ category: "Tech", title: "iPhone 15" })).toBe(
      "electronics"
    );
    expect(resolveListingDescriptionStyle({ category: "Home", title: "Couch" })).toBe("furniture");
    expect(resolveListingDescriptionStyle({ category: "Fashion", title: "Jacket" })).toBe(
      "clothing"
    );
    expect(resolveListingDescriptionStyle({ category: "Sports", title: "Bike" })).toBe("sports");
  });
});

describe("listing description quality levels", () => {
  const base: SkyAiListingFill = {
    title: "Brand New PlayStation 5 Console",
    price: "650",
    condition: "New",
    location: "Auckland",
    pickupAvailable: true,
    category: "Gaming",
    listingType: "physical",
  };

  const levels: ListingDescriptionQuality[] = ["standard", "premium", "premium_plus"];

  for (const quality of levels) {
    it(`${quality} stays truthful and non-robotic`, () => {
      const desc = buildListingDescriptionFromFacts(base, { quality });
      expect(desc).toMatch(/PlayStation\s*5/i);
      expect(desc).toMatch(/Auckland/);
      expect(desc).toMatch(/\$650/);
      expect(desc).not.toMatch(/controller|dualsense|games|SSD|warranty|authentic/i);
      expect(desc).not.toMatch(/Condition:|Message me with any questions/i);
    });
  }

  it("Āwhina default is Premium Plus (paragraphs + natural CTA)", () => {
    const desc = buildListingDescriptionFromFacts(base);
    expect(desc).toContain("\n\n");
    expect(desc).toMatch(/Feel free to get in touch if you'd like more information/i);
    expect(desc).not.toMatch(/Happy to answer questions\.$/);
  });

  it("standard uses compact single-block close", () => {
    const desc = buildListingDescriptionFromFacts(base, { quality: "standard" });
    expect(desc).toMatch(/Happy to answer questions/i);
    expect(desc).not.toContain("\n\n");
  });
});

describe("category-aware description snapshots", () => {
  const cases: Array<{ name: string; fill: SkyAiListingFill; must: RegExp[]; never: RegExp[] }> = [
    {
      name: "gaming electronics",
      fill: {
        title: "Brand New PlayStation 5 Console",
        price: "650",
        condition: "New",
        location: "Auckland",
        pickupAvailable: true,
        category: "Gaming",
        listingType: "physical",
      },
      must: [/PlayStation\s*5/i, /Auckland/, /\$650/, /Feel free to get in touch/i],
      never: [/Condition:/i, /Message me with any questions/i, /controller|dualsense|games included/i],
    },
    {
      name: "phones / electronics",
      fill: {
        title: "Like New iPhone 15 Pro",
        price: "950",
        condition: "Used - Like New",
        location: "Wellington",
        pickupAvailable: true,
        shippingAvailable: true,
        category: "Tech",
        listingType: "physical",
      },
      must: [/iPhone\s*15\s*Pro/i, /Wellington/, /\$950/, /pickup or shipping/i],
      never: [/Condition:/i, /256GB|battery|charger included/i],
    },
    {
      name: "vehicles",
      fill: {
        title: "2018 BMW 320i",
        listingType: "vehicle",
        category: "Cars",
        vehicleYear: "2018",
        vehicleMake: "BMW",
        vehicleModel: "320i",
        vehicleOdometer: "85000",
        vehicleColour: "Blue",
        vehicleTransmission: "Automatic",
        price: "18500",
        location: "Auckland",
        condition: "Used - Good",
      },
      must: [/2018/, /BMW/, /320i/, /Auckland/, /85,?000/, /blue/i, /\$18500/],
      never: [/Condition:/i, /Odometer:/i, /Colour:/i, /Message me with any questions/i, /WOF|service history/i],
    },
    {
      name: "furniture",
      fill: {
        title: "3 Seater Couch",
        price: "250",
        condition: "Used - Good",
        location: "Christchurch",
        pickupAvailable: true,
        shippingAvailable: false,
        category: "Home",
        listingType: "physical",
      },
      must: [/couch/i, /Christchurch/, /\$250/, /pickup only/i, /good used condition/i],
      never: [/Condition:/i, /Message me with any questions/i, /leather|recliner|stain/i],
    },
    {
      name: "clothing",
      fill: {
        title: "North Face Jacket",
        price: "120",
        condition: "Used - Like New",
        location: "Hamilton",
        pickupAvailable: true,
        category: "Fashion",
        listingType: "physical",
      },
      must: [/North Face|Jacket/i, /Hamilton/, /\$120/, /like-new/i],
      never: [/Condition:/i, /size M|waterproof|genuine/i],
    },
    {
      name: "sports",
      fill: {
        title: "Mountain Bike",
        price: "400",
        condition: "Used - Good",
        location: "Dunedin",
        pickupAvailable: true,
        category: "Sports",
        listingType: "physical",
      },
      must: [/bike/i, /Dunedin/, /\$400/],
      never: [/Condition:/i, /shimano|disc brakes|helmet/i],
    },
    {
      name: "services",
      fill: {
        title: "Lawn Mowing",
        listingType: "service",
        category: "Trades & Repairs",
        location: "Hamilton",
        price: "60",
        servicePricingType: "hourly",
      },
      must: [/Lawn Mowing/i, /Hamilton/, /\$60/, /hour/i],
      never: [/Condition:/i, /insured|fully equipped/i],
    },
    {
      name: "property rental",
      fill: {
        title: "2 Bedroom Apartment",
        listingType: "rental",
        rentalSubType: "property",
        category: "Property",
        location: "Auckland",
        rentalBedrooms: "2",
        rentalBathrooms: "1",
        rentalPriceWeekly: "520",
        rentalDeposit: "2080",
        rentalFurnishedStatus: "Unfurnished",
      },
      must: [/Apartment/i, /Auckland/, /\$520\/week/, /\$2080/, /2 bedroom/i],
      never: [/Condition:/i, /Message me with any questions/i, /pet friendly|heat pump/i],
    },
  ];

  for (const c of cases) {
    it(`${c.name} snapshot`, () => {
      const desc = buildListingDescriptionFromFacts(c.fill);
      assertNaturalMarketplaceCopy(desc);
      for (const re of c.must) expect(desc).toMatch(re);
      for (const re of c.never) expect(desc).not.toMatch(re);
      expect(desc).toMatchSnapshot();
    });
  }
});

describe("never invent unstated details", () => {
  it("does not add accessories or warranty from title alone", () => {
    const desc = buildListingDescriptionFromFacts({
      title: "Samsung 55 inch TV",
      price: "400",
      condition: "Used - Good",
      location: "Auckland",
      category: "Tech",
    });
    expect(desc).not.toMatch(/remote|wall mount|smart apps|warranty|4K|HDR/i);
  });

  it("weaves only real multi-word extras", () => {
    const desc = buildListingDescriptionFromFacts({
      title: "2015 Mazda Axela",
      listingType: "vehicle",
      vehicleYear: "2015",
      vehicleMake: "Mazda",
      vehicleModel: "Axela",
      vehicleOdometer: "128000",
      price: "11500",
      location: "Auckland",
      extras: ["Recently serviced", "kw:Mazda", "kw:Axela"],
    });
    expect(desc).toMatch(/Recently serviced/i);
    expect(desc).not.toMatch(/kw:Mazda|WOF|new tyres|Stage 2/i);
  });
});

describe("one-shot sell uses Premium Plus description path", () => {
  it("PS5 one-shot is natural marketplace copy", () => {
    wipe("desc-ps5");
    const r = processCanonicalAwhina(
      "want to list my ps5 its brand new 200 bucks pick up auckland",
      { conversationId: "desc-ps5", pathname: "/" }
    );
    const desc = r.listingFill?.description || "";
    expect(desc).toMatch(/PlayStation\s*5|PS5/i);
    expect(desc).toMatch(/Auckland/i);
    expect(desc).toMatch(/\$200/);
    assertNaturalMarketplaceCopy(desc);
    expect(desc).toMatchSnapshot();
  });

  it("vehicle one-shot description is category-styled", () => {
    wipe("desc-bmw");
    const r = processCanonicalAwhina(
      "selling my 2018 BMW 320i 85000km Auckland $18500",
      { conversationId: "desc-bmw", pathname: "/" }
    );
    const desc = r.listingFill?.description || "";
    expect(r.listingFill?.listingType).toBe("vehicle");
    expect(desc).toMatch(/BMW/i);
    expect(desc).not.toMatch(ROBOTIC_SMELLS);
    expect(desc).toMatchSnapshot();
  });
});
